# femafs

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  setup.py
libFemClassifier/: CMakeLists.txt
libFemClassifier/demo/classify/: fem_classifyOut  fem_classifyOut.c  opf2fem  opf2fem.c  opf2txt  training.tmp
libFemClassifier/demo/classify/data/: australian.opf  diabetes.opf  fourclass.opf  glass.opf  ionosphere.opf  segment.opf  vehicle.opf  wine.opf
libFemClassifier/include/: FEMBasis.h  FEMClassify.h  FEMDataset.h  FEMSample.h  FEMimages.h
libFemClassifier/old/: README.md
libFemClassifier/old/demo/classify/: opf_accuracy  opf_split  run.sh  runFEMa.sh  testing.tmp
libFemClassifier/old/demo/classify/data/: breast_cancer.opf  heart.opf
libFemClassifier/src/: CMakeLists.txt  FEMBasis.c  FEMClassify.c  FEMDataset.c  FEMFeatureSelection.c  FEMFeatureSelection.h  FEMSample.c  FEMSample.h  FEMUtils.c  FEMUtils.h  FEMimages.c  exported.h
libFemClassifier/swig/: CMakeLists.txt  FEMBasis.i  FEMClassify.i  FEMDataset.i  FEMFeatureSelection.i  FEMSample.i  FEMUtils.i  FEMimages.i  libFEMClassifier.i
libFemClassifier/swig/python/: CMakeLists.txt  setup.py.in
test/: CMakeLists.txt  femafs.c  helpers.py  postrun_analysis.py  preprocessing_cicids2017.py  preprocessing_nslkdd.py  preprocessing_tor-nontor.py  preprocessing_tornontor.py  preprocessing_unswnb15.py  runfs.sh  runfs_gauss_nsl_kdd_15p.sh  runfs_gauss_nsl_kdd_20p.sh  runfs_gauss_nslkdd_10p.sh  runfs_gauss_nslkdd_15p.sh  runfs_gauss_nslkdd_20p.sh  runfs_gauss_nslkdd_25p.sh  runfs_gauss_nslkdd_30p.sh  runfs_gauss_nslkdd_35p.sh  runfs_gauss_nslkdd_40p.sh  runfs_gauss_nslkdd_45p.sh  runfs_gauss_nslkdd_50p.sh  runfs_gauss_nslkdd_55p.sh  runfs_gauss_nslkdd_60p.sh  runfs_gauss_tor_nontor_10p.sh  runfs_gauss_tor_nontor_15p.sh  runfs_gauss_tor_nontor_25p.sh  runfs_gauss_tor_nontor_35p.sh  runfs_gauss_tornontor_10p.sh  runfs_gauss_tornontor_15p.sh  runfs_gauss_tornontor_20p.sh  runfs_gauss_tornontor_25p.sh  runfs_gauss_tornontor_30p.sh  runfs_gauss_tornontor_35p.sh  runfs_gauss_tornontor_40p.sh  runfs_gauss_tornontor_45p.sh  runfs_gauss_tornontor_50p.sh  runfs_gauss_tornontor_55p.sh  runfs_gauss_tornontor_60p.sh  runfs_gauss_unswnb15_10p.sh  runfs_gauss_unswnb15_15p.sh  (+62 more)
test/data/: kdd_test_minmax10.fem  kdd_train_minmax10.fem
test/data/cicids2017/: .gitattributes  cicids2017.csv
test/data/nsl-kdd/10p/: kdd_test_minmax10.fem
test/data/nslkdd/10p/: kdd_test_minmax10.opf  kdd_train_minmax10.fem  kdd_train_minmax10.opf
test/data/tor-nontor/: tor-nontor-testing.txt
test/data/tor-nontor/10p/: tor_nontor_test_10.fem  tor_nontor_test_10.opf  tor_nontor_train_10.fem  tor_nontor_train_10.opf
test/data/tor-nontor/20p/: tor_nontor_test_20.csv  tor_nontor_test_20.fem  tor_nontor_test_20.opf  tor_nontor_train.csv  tor_nontor_train_20.fem
test/old_tests/: run_opf_nsl_kdd.sh  run_opf_tor_nontor.sh  runfs_gauss_nsl_kdd_10p.sh  runfs_gauss_nsl_kdd_25p.sh  runfs_gauss_nsl_kdd_35p.sh  runfs_gauss_nsl_kdd_5p.sh  runfs_gauss_tor_nontor_10p.sh  runfs_gauss_tor_nontor_20p.sh  runfs_gauss_tor_nontor_5p.sh  runfs_shepard_nsl_kdd_15p.sh  runfs_shepard_nsl_kdd_20p.sh  runfs_shepard_nsl_kdd_25p.sh  runfs_shepard_tor_nontor_20p.sh
